--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -117,4 +117,12 @@
         android:textSize="20sp"
         android:textColor="#ffff"
         android:onClick="register" />
+
+    <ProgressBar
+        android:id="@+id/progress_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/black_gradient" />
+
 </LinearLayout>
