Bug fixed in Hompegae Activity

--- a/app/src/main/res/layout/homepage_activity.xml
+++ b/app/src/main/res/layout/homepage_activity.xml
@@ -49,7 +49,7 @@
         android:textAllCaps="false"
         android:textColor="#ffff"
         android:textSize="25dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:gravity="center"/>
 
 
